--- a/FrontendMentor/newbie/blog-preview-card-main/index.html
+++ b/FrontendMentor/newbie/blog-preview-card-main/index.html
@@ -11,19 +11,19 @@
 </head>
 <body>
 
-  Learning
+  <div class="container">
+    <img src="assets/images/illustration-article.svg" alt="">
+    <div class="text-container">
+      <span class="learning">Learning</span>
+      <p class="publish">Published 21 Dec 2023</p>
+      <h2>HTML & CSS foundations</h2>
+      <p class="text">These languages are the backbone of every website, defining structure, content, and presentation.</p>
 
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="greg-container">
+        <img src="assets/images/image-avatar.webp" alt="" class="greg-img">
+        <span class="greg">Greg Hooper</span>
+      </div>
+    </div>
   </div>
 </body>
 </html>
